[gd_scene load_steps=6 format=3 uid="uid://ddd771qs8acxj"]

[ext_resource type="Script" uid="uid://bs5bhekw4nryb" path="res://Scripts/main_menu.gd" id="1_48xlc"]
[ext_resource type="FontFile" uid="uid://q1kfaq4hjaog" path="res://Assets/Fonts/ThaleahFat.ttf" id="2_1ehe0"]
[ext_resource type="Texture2D" uid="uid://cyx22bpp2lffm" path="res://Assets/Art/Background color.png" id="2_ce3w2"]
[ext_resource type="Texture2D" uid="uid://bnl68tifbjgnn" path="res://Assets/Art/Cave Scene.png" id="3_opfnp"]
[ext_resource type="Texture2D" uid="uid://lb6mm3gog6op" path="res://Assets/Art/wumpus in game.png" id="4_cp0ys"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48xlc")

[node name="BackgroundColor" type="Sprite2D" parent="."]
position = Vector2(581, 323)
texture = ExtResource("2_ce3w2")

[node name="Cave" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(383, 278)
scale = Vector2(1.3411, 1.28704)
texture = ExtResource("3_opfnp")

[node name="Wumpus" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(754, 466)
scale = Vector2(0.65, 0.65)
texture = ExtResource("4_cp0ys")

[node name="HuntTheWumpusLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 80.0
offset_right = 785.0
offset_bottom = 190.0
theme_override_fonts/normal_font = ExtResource("2_1ehe0")
theme_override_font_sizes/normal_font_size = 100
text = "Hunt The Wumpus"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 68.0
offset_top = 333.0
offset_right = 326.0
offset_bottom = 601.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NewGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1ehe0")
theme_override_font_sizes/font_size = 40
text = "New Game"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1ehe0")
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="Achievements" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1ehe0")
theme_override_font_sizes/font_size = 40
text = "Achievements"

[node name="Tutorial" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1ehe0")
theme_override_font_sizes/font_size = 40
text = "Tutorial"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1ehe0")
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "                                                              "

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 917.0
offset_top = 608.0
offset_right = 1115.0
offset_bottom = 632.0
theme_override_fonts/normal_font = ExtResource("2_1ehe0")
theme_override_font_sizes/normal_font_size = 20
text = "Made by Pixel Perfect"

[node name="game_start_difficulty" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 354.0
offset_right = 573.0
offset_bottom = 597.0

[node name="VBoxContainer" type="VBoxContainer" parent="game_start_difficulty"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="game_start_difficulty/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_1ehe0")
theme_override_font_sizes/normal_font_size = 50
text = "Difficulty"
fit_content = true
autowrap_mode = 0

[node name="Easy" type="Button" parent="game_start_difficulty/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1ehe0")
theme_override_font_sizes/font_size = 40
text = "Easy"

[node name="Medium" type="Button" parent="game_start_difficulty/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1ehe0")
theme_override_font_sizes/font_size = 40
text = "Medium"

[node name="Hard" type="Button" parent="game_start_difficulty/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1ehe0")
theme_override_font_sizes/font_size = 40
text = "Hard"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Achievements" to="." method="_on_achievements_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="ready" from="game_start_difficulty" to="." method="_on_game_start_difficulty_ready"]
[connection signal="pressed" from="game_start_difficulty/VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="game_start_difficulty/VBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="game_start_difficulty/VBoxContainer/Hard" to="." method="_on_hard_pressed"]
